@startuml
class EmployeeController {
  +updateEmployee(id: Long, employee: Employee): BaseResponse<Employee>
}
interface EmployeeMapper {
  +update(employee: Employee): int ' or void
}
class Employee {
  +id: Long
  +name: String
  +address: String 
  +gender: Integer
  +rocId: String
  ' other fields as per actual entity
}
class BaseResponse<T> {
  +code: String
  +message: String
  +data: T
}

EmployeeController ..> EmployeeMapper : uses
EmployeeController ..> BaseResponse : uses in response
EmployeeController ..> Employee : uses in request and response
EmployeeMapper ..> Employee : uses as parameter
BaseResponse o-- Employee : (T is Employee)
@enduml
